# Mastro

./: .gitignore  README.md  pyproject.toml
.qwen/: settings.json.orig
.qwen/skills/access-vo-services/: SKILL.md  examples.md
.qwen/skills/astronomy-package-preference/: SKILL.md  examples.md  reference-astropy.md
.qwen/skills/astropy/: examples.md
.qwen/skills/astroquery/: SKILL.md  examples.md
.qwen/skills/carta/: examples.md  reference.md
.qwen/skills/process-astronomical-data/: SKILL.md
.qwen/skills/pyvo/: reference.md
.qwen/skills/query-astro-database/: reference.md
.qwen/skills/visualize-radio-images/: SKILL.md
.qwen/skills/wsclean/: SKILL.md  examples.md  reference.md
src/mastro/: __init__.py  nasa_ads.py  scihub.py
src/mastro/ads/: __init__.py  cli.py
src/mastro/scihub/: __init__.py  cli.py  scihub.py
tests/: test_nasa_ads.py  test_scihub.py
